  (SF.net bug #1936714 - Kazutoshi Satoda)

- When launching jEdit with some files in the command line if the bufferSet was
  not global, the files were opened but not visible in the editPane
  (Matthieu Casanova)

- #1766853: View is not plain with -newplainview on first launch.
  '-newplainview' now works also when jEdit is not running.
  (Shlomy Reinstein)
}}}
{{{ Miscellaneous
- Added the absolute caret position in the caret status of the status bar
  (Matthieu Casanova)

- Added a widget for the statusbar that displays the length of the current
  selection (feature #1912735) (Matthieu Casanova)

- Moved buffer list sorting options from General to View Option Pane
  with other bufferset options. (Alan Ezust)

- Enabled reverse regex search. (SF.net patch #1923613 - Greg Merrill)
  NOTE: There is a known problem with "$". (SF.net bug #2069249)

- New option in saving/backup: Never mark untitled buffers dirty.
  Related to that, buffers with length=0 never never marked dirty.
  -- (request # 2068307 - Alan Ezust)

- New option in saving/backup: Calculate MD5 hash to see if the
  file as loaded from disk is the same as what is in the buffer.
  -- (Request # 2077326 - Alan Ezust)

- New action new-file-in-mode, which opens a dialog listing the
  available modes, the user can select one and a new file is created
  under that mode. (SF.net patch #1829669 - Eric Berry)

- Removed own back buffers for textarea, which were meant to speed up
  painting textarea, because the effect seemed to be not noticeable and
  not stable over runtime environments, while it broke Background plugin
  (SF.net Plugin Bugs #1620694) and consumed much memory.
  (Kazutoshi Satoda)

- Improved rendering of complex text layout (like Indic text) in text
  area. (SF.net bug #981012 - Kazutoshi Satoda)

- Added some new encoding detectors which reads some lines at the top of
  file and search for encoding declaration pattern in regex.
    - html: finds "\bcharset=(ENCODING)"